# lxqt-settings

./: AUTHORS  CMakeLists.txt  README  liblxqt-settings.cpp  liblxqt-settings.h  liblxqt-settings.kdev4  main.cpp
